Working quick-edit UI for box-shadow property
Related to thimble.mozilla.org#2508 for creating an extension to open quick edit UI for box-shadow property( similar to color-picker).
This is a very early version with bugs, and lot of unnecessary comments, logs. It's a work in progress.

--- a/src/extensions/bramble-extensions.json
+++ b/src/extensions/bramble-extensions.json
@@ -52,6 +52,14 @@
         ]
     },
     {
+        "path": "extensions/default/InlineBoxShadowEditor",
+        "less": {
+            "dist/extensions/default/InlineBoxShadowEditor/css/style.css": [
+                "src/extensions/default/InlineBoxShadowEditor/css/style.less"
+            ]
+        }
+    },
+    {
         "path": "extensions/default/Inline3DParametersEditor",
         "less": {
             "dist/extensions/default/Inline3DParametersEditor/css/main.css": [
