Added all components for Border Radius Inline editor

--- a/src/extensions/bramble-extensions.json
+++ b/src/extensions/bramble-extensions.json
@@ -52,6 +52,17 @@
         ]
     },
     {
+        "path": "extensions/default/InlineBorderRadiusEditor",
+        "less": {
+            "dist/extensions/default/InlineBorderRadiusEditor/css/main.css": [
+                "src/extensions/default/InlineBorderRadiusEditor/css/main.less"
+            ]
+        },
+        "copy": [
+            "extensions/default/InlineBorderRadiusEditor/img/*.png"
+        ]
+    },
+    {
         "path": "extensions/default/Inline3DParametersEditor",
         "less": {
             "dist/extensions/default/Inline3DParametersEditor/css/main.css": [
