change package.json scripts

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "gunzip-maybe": "^1.3.1",
         "http-server": "mozilla/http-server#gzip",
         "mkdirp": "0.5.1",
+        "npm-run-all": "^4.1.2",
         "nunjucks": "^2.4.3",
         "properties-parser": "0.3.1",
         "request": "^2.69.0",
@@ -72,13 +73,14 @@
         "localize-dist": "node scripts/properties2js dist",
         "unlocalize": "rimraf src/nls && git checkout -- src/nls",
         "postinstall": "grunt install",
-        "build": "grunt build-browser && grunt watch:bramble",
+        "build": "grunt build-browser",
+        "watch:api": "grunt watch:bramble",
         "preproduction": "grunt build-browser-compressed && npm run unlocalize",
         "production": "npm start -- --gzip",
         "test": "grunt test && grunt build-browser-compressed",
         "server": "http-server -p 8000 --cors",
         "prestart": "npm run localize && grunt build-browser-dev",
-        "start": "npm run server || true",
+        "start": "run-p server watch:api || true",
         "poststart": "npm run unlocalize"
     },
     "license": "MIT"
